2005-07-12  Jim Meyering  <jim@meyering.net>

	* Version 5.3.1.

	* Makefile.maint (copyright-check): Reflect rearrangement in
	version-etc files.

2005-07-11  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Binary input and output are now implemented more consistently.
	These changes affect only platforms like MS-DOS that distinguish
	between binary and text files.
	* src/cat.c (usage, main, long_options) [O_BINARY]:
	Remove support for -B.  Use same rules as other programs to decide
	whether to use binary I/O, except that the -bensAE options always
	select text mode.
	* src/cat.c (main): Avoid setmode; use POSIX-specified routines instead.
	* src/cksum.c (cksum): Likewise.
	* src/head.c (head_lines, head_file): Likewise.
	* src/od.c (open_next_file): Likewise.
	* src/split.c (main): Likewise.
	* src/sum.c (bsd_sum_file, sysv_sym_file): Likewise.
	* src/tac.c (copy_to_temp, tac_file, main): Likewise.
	* src/tail.c (tail_bytes, tail_lines, tail_file, main): Likewise.
	* src/tee.c (tee): Likewise.
	* src/tr.c (main): Likewise.
	* src/wc.c (wc): Likewise.
	* src/copy.c (copy_reg): Always copy in binary mode.
	* src/expand.c (expand): Always copy in text mode.  POSIX says
	the input and output must be text.
	* src/unexpand.c (unexpand): Likewise.
	* src/head.c (elide_tail_bytes_file, elide_tail_lines_file, head_bytes):
	(head_lines, head_file): Always use binary mode except for std tty.
	* src/md5sum.c (usage): Clarify whether text or binary is the default.
	(split_3, main): BINARY is now a 3-way value.  All uses changed.
	(digest_file): Likewise.  Clear *BINARY if we determine the file
	to be text.  All uses changed.
	(main): Don't report a file to be binary if we actually read it
	as text in MS-DOS, because it was a terminal.
	* src/shred.c (wipefile): Always use binary mode.  Clearly this
	never worked right on DOS!
	* src/system.h (setmode, fileno): Remove; no longer needed, we think.
	(SET_MODE, SET_BINARY, SET_BINARY2): Remove.