@@ -1,6 +1,11 @@
-2005-07-12  Jim Meyering  <jim@meyering.net>
+2005-07-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* Version 5.3.1.
+
+	* src/Makefile.am (nanosec_libs): Remove $(FESETROUND_LIBM); no longer
+	needed.  Problem reported by Jeff Bailey.
+
+2005-07-12  Jim Meyering  <jim@meyering.net>
 
 	* Makefile.maint (copyright-check): Reflect rearrangement in
 	version-etc files.
